# P5RTableEditorForChinese

./: CMakeLists.txt  README.md  character.txt  icon.txt  main.cpp  out.txt
form/: mainwindow.ui
include/: CTD.h  CTDReader.h  CharacterReader.h  Chat.h  ChatIconReader.h  ChatLibrary.h  ChatLibraryReader.h  ChatNameReader.h  ChatReader.h  IReader.h  IWriter.h  P5RChat.h  mainwindow.h
source/: CTDReader.cpp  CharacterReader.cpp  ChatIconReader.cpp  ChatLibrary.cpp  ChatLibraryReader.cpp  ChatNameReader.cpp  ChatReader.cpp  mainwindow.cpp
